fix: outermost scrollbar in mobile device

--- a/src/assets/component.css
+++ b/src/assets/component.css
@@ -11,7 +11,7 @@
 }
 
 .mask {
-  @apply h-screen w-full bg-black bg-opacity-50 top-0 z-10 absolute transition-all;
+  @apply h-full w-full bg-black bg-opacity-50 top-0 z-10 absolute transition-all;
 }
 
 .divider-h {
@@ -25,7 +25,7 @@
 /* Navigation header */
 
 .navbar {
-  @apply wide h-14 row border-b bg-white justify-between border-gray-200 relative z-20;
+  @apply wide h-14 row border-b justify-between border-gray-200 relative;
 
   &.tight {
     @apply h-10;
